--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "extra": {
       "laravel": {
         "providers": [
+          "InetStudio\\Widgets\\Providers\\BladeServiceProvider",
           "InetStudio\\Widgets\\Providers\\WidgetsServiceProvider"
         ]
       }
