--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "providers": [
           "InetStudio\\Widgets\\Providers\\BladeServiceProvider",
           "InetStudio\\Widgets\\Providers\\FormBuilderServiceProvider",
+          "InetStudio\\Widgets\\Providers\\WidgetsBindingsServiceProvider",
           "InetStudio\\Widgets\\Providers\\WidgetsServiceProvider"
         ]
       }
