--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,28 @@
 {
-    "name": "inetstudio/widgets",
-    "description": "Package for widgets",
-    "homepage": "https://github.com/inetstudio/widgets",
-    "license": "MIT",
-    "authors": [
-      {
-        "name": "Konstantin Bukin",
-        "email": "bukin@inetstudio.ru"
-      }
-    ],
-    "autoload": {
-      "psr-4": {
-        "InetStudio\\Widgets\\": "src/"
-      }
-    },
-    "extra": {
-      "laravel": {
-        "providers": [
-          "InetStudio\\Widgets\\Providers\\WidgetsBindingsServiceProvider",
-          "InetStudio\\Widgets\\Providers\\WidgetsServiceProvider"
-        ]
-      }
+  "name": "inetstudio/widgets",
+  "description": "Package for widgets",
+  "homepage": "https://github.com/inetstudio/widgets",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Konstantin Bukin",
+      "email": "bukin@inetstudio.ru"
     }
+  ],
+  "require": {
+    "inetstudio/admin-panel": "^6.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "InetStudio\\Widgets\\": "src/"
+    }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "InetStudio\\Widgets\\Providers\\WidgetsBindingsServiceProvider",
+        "InetStudio\\Widgets\\Providers\\WidgetsServiceProvider"
+      ]
+    }
+  }
 }
